# claude-ame

./: .gitignore  README.md  STATE.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
src/skills/claude-ame-operator/: SKILL.md
